[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/enemy_move_state.gd" type="Script" id=1]
[ext_resource path="res://Scripts/enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/musolini/run/sprite_1.png" type="Texture" id=3]
[ext_resource path="res://Assets/musolini/idle/sprite_0.png" type="Texture" id=4]
[ext_resource path="res://Assets/musolini/run/sprite_0.png" type="Texture" id=5]
[ext_resource path="res://Assets/musolini/idle/sprite_1.png" type="Texture" id=6]
[ext_resource path="res://Scripts/enemy_action_state.gd" type="Script" id=7]
[ext_resource path="res://Assets/musolini/jump/sprite_0.png" type="Texture" id=8]
[ext_resource path="res://Assets/musolini/fall/sprite_0.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 91.3679

[sub_resource type="CircleShape2D" id=2]
radius = 60.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.3659, 19.6296 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "none"
length = 0.001

[sub_resource type="Animation" id=6]
resource_name = "patrol"
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00266038, 0.39, 1.22, 1.63 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -57.28, 0 ), Vector2( -57.28, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.21 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3.72529e-09, 0.43, 1.2, 1.64 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "idle", "run", "idle", "run" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.00201886, 0.385755, 1.63613, 2.50076 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, true ]
}

[sub_resource type="CapsuleShape2D" id=7]
radius = 15.6781
height = 14.7184

[node name="musolini2" type="KinematicBody2D"]
position = Vector2( 0.552078, 0.736103 )
collision_layer = 6
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
detect_radius = 600
in_range_radius = 400

[node name="enemy_move_state" type="Node" parent="."]
script = ExtResource( 1 )

[node name="enemy_action_state" type="Node" parent="."]
script = ExtResource( 7 )

[node name="in_range" type="Area2D" parent="."]
visible = false
modulate = Color( 0.364706, 0.364706, 0.364706, 1 )
self_modulate = Color( 0.717647, 0.133333, 0.678431, 1 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="in_range"]
shape = SubResource( 1 )

[node name="player_detect" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detect"]
modulate = Color( 0.0901961, 0.356863, 0, 1 )
self_modulate = Color( 1, 0.909804, 0, 1 )
shape = SubResource( 2 )

[node name="collision_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 1

[node name="RayCast2D" type="RayCast2D" parent="Node2D"]
position = Vector2( -9, 19 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 3

[node name="RayCast2D2" type="RayCast2D" parent="Node2D"]
position = Vector2( 9, 19 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 7

[node name="move_text" type="RichTextLabel" parent="."]
margin_left = -21.0
margin_top = 21.0
margin_right = 33.0
margin_bottom = 61.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="action_text" type="RichTextLabel" parent="."]
margin_left = -21.0
margin_top = -33.0
margin_right = 25.0
margin_bottom = 7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 2, 0 )
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 4 )
animation = "fall"
playing = true

[node name="animationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/none = SubResource( 5 )
anims/patrol = SubResource( 6 )
__meta__ = {
"_editor_description_": "yep"
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )
[connection signal="body_exited" from="in_range" to="." method="_on_range_body_exited"]
[connection signal="body_entered" from="player_detect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
